{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 283,
  "lineage": "568dc4ce-dc42-815a-73bf-b7f9833d2cc7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee3dd41c47751fe6",
            "arn": "arn:aws:ec2:us-east-1:563158565787:instance/i-02bb6735766d91975",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globo-web-app-dev-57196-nginx_profile",
            "id": "i-02bb6735766d91975",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f6206d53ee9ee9ac",
            "private_dns": "ip-10-0-0-143.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.143",
            "public_dns": "ec2-44-204-91-73.compute-1.amazonaws.com",
            "public_ip": "44.204.91.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e8fa5d20d0c2c3bf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0521860f34a747d46",
            "tags": {
              "Name": "globo-web-app-dev-nginx-0",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-nginx-0",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0816f1f22f3590408"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.app.aws_subnet.public",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee3dd41c47751fe6",
            "arn": "arn:aws:ec2:us-east-1:563158565787:instance/i-057c9846a609816da",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globo-web-app-dev-57196-nginx_profile",
            "id": "i-057c9846a609816da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c611022dd480d42c",
            "private_dns": "ip-10-0-1-114.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.114",
            "public_dns": "ec2-54-82-94-28.compute-1.amazonaws.com",
            "public_ip": "54.82.94.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b5b4f37578e3f356",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09eef980661e7a47d",
            "tags": {
              "Name": "globo-web-app-dev-nginx-1",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-nginx-1",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0816f1f22f3590408"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.app.aws_subnet.public",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "globo-web-app-dev-57196",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:563158565787:loadbalancer/app/globo-web-alb/f8437eb550cb73c2",
            "arn_suffix": "app/globo-web-alb/f8437eb550cb73c2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "globo-web-alb-1676018470.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:563158565787:loadbalancer/app/globo-web-alb/f8437eb550cb73c2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globo-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02ef79d8133d7fe14"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0521860f34a747d46"
              },
              {
                "subnet_id": "subnet-09eef980661e7a47d"
              }
            ],
            "subnets": [
              "subnet-0521860f34a747d46",
              "subnet-09eef980661e7a47d"
            ],
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-0734336a06a4319f8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.app.aws_subnet.public",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:563158565787:listener/app/globo-web-alb/f8437eb550cb73c2/02053e0a5c3c2d86",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:563158565787:targetgroup/nginx-alb-tg/20964b5bb06dcce0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:563158565787:listener/app/globo-web-alb/f8437eb550cb73c2/02053e0a5c3c2d86",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:563158565787:loadbalancer/app/globo-web-alb/f8437eb550cb73c2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.app.aws_subnet.public",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:563158565787:targetgroup/nginx-alb-tg/20964b5bb06dcce0",
            "arn_suffix": "targetgroup/nginx-alb-tg/20964b5bb06dcce0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:563158565787:targetgroup/nginx-alb-tg/20964b5bb06dcce0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0734336a06a4319f8"
          },
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:563158565787:targetgroup/nginx-alb-tg/20964b5bb06dcce0-20230704001524554700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:563158565787:targetgroup/nginx-alb-tg/20964b5bb06dcce0",
            "target_id": "i-02bb6735766d91975"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.app.aws_subnet.public",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:563158565787:targetgroup/nginx-alb-tg/20964b5bb06dcce0-20230704001524360600000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:563158565787:targetgroup/nginx-alb-tg/20964b5bb06dcce0",
            "target_id": "i-057c9846a609816da"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.app.aws_subnet.public",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563158565787:security-group/sg-02ef79d8133d7fe14",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ef79d8133d7fe14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "globo-web-app-dev-nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "563158565787",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0734336a06a4319f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563158565787:security-group/sg-0816f1f22f3590408",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0816f1f22f3590408",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "globo-web-app-dev-nginx_sg",
            "name_prefix": "",
            "owner_id": "563158565787",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0734336a06a4319f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563158565787:network-acl/acl-04c96ba8ad986ee6f",
            "default_network_acl_id": "acl-04c96ba8ad986ee6f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04c96ba8ad986ee6f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "563158565787",
            "subnet_ids": [
              "subnet-0521860f34a747d46",
              "subnet-09eef980661e7a47d"
            ],
            "tags": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-0734336a06a4319f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563158565787:route-table/rtb-0967281632fff2fa2",
            "default_route_table_id": "rtb-0967281632fff2fa2",
            "id": "rtb-0967281632fff2fa2",
            "owner_id": "563158565787",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0734336a06a4319f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563158565787:security-group/sg-0557f02847aef9787",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0557f02847aef9787",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "563158565787",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-0734336a06a4319f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563158565787:internet-gateway/igw-0699ea3f391a02e7e",
            "id": "igw-0699ea3f391a02e7e",
            "owner_id": "563158565787",
            "tags": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-0734336a06a4319f8"
          },
          "dependencies": [
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0699ea3f391a02e7e",
            "id": "r-rtb-036f1e0a29675b5481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-036f1e0a29675b548",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_internet_gateway.this",
            "module.app.aws_route_table.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563158565787:route-table/rtb-036f1e0a29675b548",
            "id": "rtb-036f1e0a29675b548",
            "owner_id": "563158565787",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0699ea3f391a02e7e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0734336a06a4319f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04828e0a0846b15f3",
            "route_table_id": "rtb-036f1e0a29675b548",
            "subnet_id": "subnet-0521860f34a747d46"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_route_table.public",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07eb506526c6a83d0",
            "route_table_id": "rtb-036f1e0a29675b548",
            "subnet_id": "subnet-09eef980661e7a47d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_route_table.public",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563158565787:subnet/subnet-0521860f34a747d46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0521860f34a747d46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "563158565787",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-0734336a06a4319f8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563158565787:subnet/subnet-09eef980661e7a47d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09eef980661e7a47d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "563158565787",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "vpc_id": "vpc-0734336a06a4319f8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563158565787:vpc/vpc-0734336a06a4319f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04c96ba8ad986ee6f",
            "default_route_table_id": "rtb-0967281632fff2fa2",
            "default_security_group_id": "sg-0557f02847aef9787",
            "dhcp_options_id": "dopt-17309e6d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0734336a06a4319f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0967281632fff2fa2",
            "owner_id": "563158565787",
            "tags": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            },
            "tags_all": {
              "Name": "globo-web-app-dev-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app"
            }
          }
        }
      ]
    }
  ]
}